--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html>
 <head>
 	<title>Hola </title>
@@ -7,9 +6,16 @@
 <body>
 <h2><b> Rosa susana Garcia Nabarro </b><h2>
 	<img src="https://www.lavanguardia.com/r/GODO/LV/p5/WebSite/2018/12/16/Recortada/img_dibernon_20160420-191445_imagenes_lv_propias_dibernon__dsf4269-kDvF--656x440@LaVanguardia-Web.jpg">
-<h2><u> Sheily Anahi Gonzalez Lopez </u></h2>
-     <img src="https://www.top10listas.com/archivos/listas/8-1537525753.jpg "> 
+	<p>QUE LE GUSTA HACER<br>
+	1 Jugar Futbol<br>
+	2 leer<br>
+	3 ver television<br>
+</p>
+	<hr color="green" size="12px">
+ <h2><u> Sheily Anahi Gonzalez Lopez </u></h2>
+     <img src="https://www.top10listas.com/archivos/listas/8-1537525753.jpg"> 
 <h3><i><u>De 6to Administracion. Es un gusto saludarlo</u></i></h3>
+
 </body>
 </html>
 
