--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 <h2><b> Rosa susana Garcia Nabarro </b><h2>
 	<img src="https://www.lavanguardia.com/r/GODO/LV/p5/WebSite/2018/12/16/Recortada/img_dibernon_20160420-191445_imagenes_lv_propias_dibernon__dsf4269-kDvF--656x440@LaVanguardia-Web.jpg">
-	<p>QUE LE GUSTA HACER<br>
+	<p>
+  QUE LE GUSTA HACER<br>
 	1 Jugar Futbol<br>
 	2 leer<br>
 	3 ver television<br>
