--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 	<hr color="green" size="12px">
  <h2><u> Sheily Anahi Gonzalez Lopez </u></h2>
      <img src="https://www.top10listas.com/archivos/listas/8-1537525753.jpg"> 
+	<p>
+	QUE LE GUSTA HACER<br>
+	1 Esatr con mi familia<br>
+	2 ver television<br>
+	3 jugar pelota <br>
+</p>
 <h3><i><u>De 6to Administracion. Es un gusto saludarlo</u></i></h3>
 
 </body>
