--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
+<!doctype html>
 <html>
 <head>
 	<title>Hola </title>
 <h1><center>Bienvenido Profe Elemer</h1></center>
-<h3>Le Saluda:</h3>
 <body>
+	 <body bgcolor="green">
 <h2><b> Rosa susana Garcia Nabarro </b><h2>
 	<img src="https://www.lavanguardia.com/r/GODO/LV/p5/WebSite/2018/12/16/Recortada/img_dibernon_20160420-191445_imagenes_lv_propias_dibernon__dsf4269-kDvF--656x440@LaVanguardia-Web.jpg">
+	
 	<p>
-  QUE LE GUSTA HACER<br>
-	1 Jugar Futbol<br>
-	2 leer<br>
-	3 ver television<br>
+
+	QUE LE GUSTA HACER <br>
+	1 Escuchar Musica <br>
+	2 Dibujar <br>
+
 </p>
-	<hr color="green" size="12px">
+
+	<hr color="Yellow" size="12px">
+
  <h2><u> Sheily Anahi Gonzalez Lopez </u></h2>
      <img src="https://www.top10listas.com/archivos/listas/8-1537525753.jpg"> 
-	<p>
-	QUE LE GUSTA HACER<br>
-	1 Esatr con mi familia<br>
-	2 ver television<br>
-	3 jugar pelota <br>
+     
+     <p>
+
+	QUE LE GUSTA HACER <br >
+	1 estar con mi familia <br >
+	2 ver televisión <br >
+	3 jugar pelota <br >
 </p>
 <h3><i><u>De 6to Administracion. Es un gusto saludarlo</u></i></h3>
 
 </body>
 </html>
+
 
