--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <h1><center>Bienvenido Profe Elemer</h1></center>
 <body>
 	 <body bgcolor="green">
-<h2><b> Rosa susana Garcia Nabarro </b><h2>
-	<img src="https://www.lavanguardia.com/r/GODO/LV/p5/WebSite/2018/12/16/Recortada/img_dibernon_20160420-191445_imagenes_lv_propias_dibernon__dsf4269-kDvF--656x440@LaVanguardia-Web.jpg">
+<h2><b> Rosa Susana Garcia Nabarro </b><h2>
+	<img src="C:\Users\Home\Downloads\WhatsApp Image 2020-06-20 at 6.35.36 PM.jpeg" width="300" height="300">
 	
 	<p>
 
@@ -19,18 +19,21 @@
 	<hr color="Yellow" size="12px">
 
  <h2><u> Sheily Anahi Gonzalez Lopez </u></h2>
-     <img src="https://www.top10listas.com/archivos/listas/8-1537525753.jpg"> 
+     <img src="C:\Users\Home\Downloads\WhatsApp Image 2020-06-20 at 6.49.11 PM.jpeg" width="300" height="300"> 
      
      <p>
 
-	QUE LE GUSTA HACER <br >
-	1 estar con mi familia <br >
-	2 ver televisión <br >
+	QUE LE GUSTA HACER  <br >
+	1 estar con mi familia  <br >
+	2 ver television <br >
 	3 jugar pelota <br >
+
 </p>
 <h3><i><u>De 6to Administracion. Es un gusto saludarlo</u></i></h3>
 
 </body>
 </html>
+
+
 
 
