--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	 <body bgcolor="green">
 <h2><b> Rosa Susana Garcia Nabarro </b><h2>
-	<img src="C:\Users\Home\Downloads\WhatsApp Image 2020-06-20 at 6.35.36 PM.jpeg" width="300" height="300">
+	<img src="IMG-20200620-WA0016.jpg" width="300" height="300">
 	
 	<p>
 
@@ -19,7 +19,7 @@
 	<hr color="Yellow" size="12px">
 
  <h2><u> Sheily Anahi Gonzalez Lopez </u></h2>
-     <img src="C:\Users\Home\Downloads\WhatsApp Image 2020-06-20 at 6.49.11 PM.jpeg" width="300" height="300"> 
+     <img src="Imagen de WhatsApp 2020-06-20 a las 6.49.11 PM.jpg" width="300" height="300"> 
      
      <p>
 
@@ -33,7 +33,6 @@
 
 </body>
 </html>
-
 
 
 
