--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<hr color="Yellow" size="12px">
 
  <h2><u> Sheily Anahi Gonzalez Lopez </u></h2>
-     <img src="Imagen de WhatsApp 2020-06-20 a las 6.49.11 PM.jpg" width="300" height="300"> 
+     <img src="33583352_2154089868157135_1107897727515099136_n.jpgg" width="300" height="300"> 
      
      <p>
 
@@ -33,6 +33,4 @@
 
 </body>
 </html>
-
-
 
