--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<hr color="Yellow" size="12px">
 
  <h2><u> Sheily Anahi Gonzalez Lopez </u></h2>
-     <img src="33583352_2154089868157135_1107897727515099136_n.jpgg" width="300" height="300"> 
+     <img src="IMG_20191111_232241.jpg" width="300" height="300"> 
      
      <p>
 
