--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 	2 ver television <br >
 	3 jugar pelota <br >
 
+
 </p>
-<h3><i><u>De 6to Administracion. Es un gusto saludarlo</u></i></h3>
+<h3><i><u>Del grado de 6to Administracion. Es un gusto saludarlo</u></i></h3>
 
 </body>
 </html>
