--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>Hola </title>
-<h1><center>Bienvenido Profe Elemer</h1></center>
+<h1><center>Bienvenido Profe Elmer</h1></center>
 <body>
 	 <body bgcolor="green">
-<h2><b> Rosa Susana Garcia Nabarro </b><h2>
+<h2><b> Rosa Susana Garcia Navarro </b><h2>
 	<img src="IMG-20200620-WA0016.jpg" width="300" height="300">
 	
 	<p>
@@ -27,7 +27,6 @@
 	1 estar con mi familia  <br >
 	2 ver television <br >
 	3 jugar pelota <br >
-
 
 </p>
 <h3><i><u>Del grado de 6to Administracion. Es un gusto saludarlo</u></i></h3>
