--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 	QUE LE GUSTA HACER <br>
 	1 Escuchar Musica <br>
 	2 Dibujar <br>
+	3 Ver películas de comedia <br>
+    4 Saltar la cuerda por las mañana <br>
+
+
+Lo que hago durante la  semana  es trabajar mis ejercicios pendientes ver televisión  por un rato<br>
+luego por la tarde hacer un poco de manualidad y ayudar a mi mamá con la limpieza y cena. <br>
+Antes de ir acostarme recibo un poco mis redes sociales <br>
 
 </p>
 
@@ -24,13 +31,17 @@
      <p>
 
 	QUE LE GUSTA HACER  <br >
-	1 estar con mi familia  <br >
+	1 estar en familia  <br >
 	2 ver television <br >
 	3 jugar pelota <br >
+	4 salis de paseo <br>
+
+	Lo que suelo hacer es ayudar a mi mama con los quehaceres de la casa,  hacer tareas <br>
+	de lo que dejan los maestros, suelo jugar futbol con mis primos en mis tiempos libres, <br>
+	tengo que estar al pendiente de mi hermanita cuando mi mama esta trabajando, etc.<br>
 
 </p>
 <h3><i><u>Del grado de 6to Administracion. Es un gusto saludarlo</u></i></h3>
 
 </body>
 </html>
-
