--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <h1><center>Bienvenido Profe Elmer</h1></center>
 <body>
 	 <body bgcolor="green">
-<h2><b> Rosa Susana Garcia Navarro </b><h2>
+		 <h2><b> Rosa Susana Garcia Navarro </b></h2>
 	<img src="IMG-20200620-WA0016.jpg" width="300" height="300">
 	
 	<p>
-<h3>
+
 	QUE LE GUSTA HACER <br>
 	1 Escuchar Musica <br>
 	2 Dibujar <br>
@@ -29,7 +29,7 @@ Antes de ir acostarme recibo un poco mis redes sociales <br>
      <img src="IMG_20191111_232241.jpg" width="300" height="300"> 
      
      <p>
-<h3>
+
 	QUE LE GUSTA HACER  <br >
 	1 estar en familia  <br >
 	2 ver television <br >
@@ -39,7 +39,7 @@ Antes de ir acostarme recibo un poco mis redes sociales <br>
 	Lo que suelo hacer es ayudar a mi mama con los quehaceres de la casa,  hacer tareas <br>
 	de lo que dejan los maestros, suelo jugar futbol con mis primos en mis tiempos libres, <br>
 	tengo que estar al pendiente de mi hermanita cuando mi mama esta trabajando, etc.<br>
-</h3>
+
 </p>
 <h3><i><u>Del grado de 6to Administracion. Es un gusto saludarlo</u></i></h3>
 
